fix wrapping on multiselect

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -117,6 +117,7 @@ input[type=number]::-webkit-outer-spin-button {
 .multiselect__single {
   text-align: right;
   margin-bottom: 0px !important;
+  white-space: nowrap;
 }
 
 .multiselect__tags {
